fixed-line-align of page numbers hover

--- a/results.css
+++ b/results.css
@@ -211,15 +211,16 @@ a:hover {
   left: 220px;
 }
 
+/* active page underline */
 .page-numbers ul:first-child::before {
   content: "";
  
-  width: 31px;
+  width: 36px;
   height: 2px;
  background: #000;
   position: absolute;
   bottom: 0;
-  margin-left: -2px;
+   
  
  
   
@@ -231,24 +232,29 @@ a:hover {
   display: flex;
   list-style: none;
   margin-right: 50px;
-  padding: 0.6rem;
+  padding: 0.9rem;
+  transition:   .4s;
   
 }
 
 .page-numbers li:hover {
   background: rgba(71, 71, 71, 0.726);
-  text-align: center;
+   
+   
 }
 
 .page-numbers li:after {
   content: "";
   display: block;
-  width: 31px;
+  width: 36px;
   height: 2px;
- 
+
+  /* line-align to the box */
+  margin-left: -14px;
   position: absolute;
+ 
   bottom: 0;
-  margin-left: -12px;
+ 
   visibility: hidden;
   transition-duration: 0.5s;
 }
@@ -258,6 +264,8 @@ a:hover {
   background: rgb(78, 78, 78);
 }
 
+
+/* arrow  */
 /* .page-numbers li:last-of-type::after {
   content: "";
   background:   url("imgs/svgs/chevron-right.svg") center center no-repeat;
